[gd_scene load_steps=5 format=2]

[ext_resource path="res://Lekkasje.gd" type="Script" id=1]
[ext_resource path="res://Test.gd" type="Script" id=2]
[ext_resource path="res://TrendLine.gd" type="Script" id=3]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.192157, 0.192157, 0.192157, 1 )

[node name="Lekkasje" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.113725, 0.278431, 0.380392, 0 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 25
custom_constants/margin_top = 25
custom_constants/margin_left = 25
custom_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 25.0
margin_top = 25.0
margin_right = 455.0
margin_bottom = 710.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 213.0
margin_bottom = 685.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="OptionButton" type="OptionButton" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_right = 213.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
text = "1901-A-VC23-0263"
align = 1
items = [ "1901-A-VC23-0263", null, false, 0, null, "1901-A-VC23-0372", null, false, 1, null, "1901-A-VC23-0378", null, false, 2, null ]
selected = 0

[node name="PressureStart" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 49.0
margin_right = 213.0
margin_bottom = 73.0
size_flags_horizontal = 3
text = "0"
align = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/PressureStart"]
anchor_top = 0.0416667
anchor_right = 1.0
anchor_bottom = 0.0416667
margin_top = -15.0
margin_bottom = -1.0
text = "Barg testvolum f√∏r test"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="PressureAfter" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 98.0
margin_right = 213.0
margin_bottom = 122.0
size_flags_horizontal = 3
text = "5"
align = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/PressureAfter"]
anchor_right = 1.0
margin_top = -15.0
margin_bottom = -1.0
text = "Barg testvolum etter test"
align = 1
valign = 1

[node name="TestTime" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 147.0
margin_right = 213.0
margin_bottom = 171.0
size_flags_horizontal = 3
text = "10"
align = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/TestTime"]
anchor_right = 1.0
margin_top = -14.0
text = "Test varighet, sek"
align = 1
valign = 1

[node name="PressureExternal" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 196.0
margin_right = 213.0
margin_bottom = 220.0
size_flags_horizontal = 3
text = "7"
align = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/PressureExternal"]
anchor_right = 1.0
margin_top = -14.0
text = "Driftstrykk barg"
align = 1
valign = 1

[node name="Temperatur" type="LineEdit" parent="MarginContainer/HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
margin_top = 245.0
margin_right = 213.0
margin_bottom = 269.0
size_flags_horizontal = 3
text = "15"
align = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/Temperatur"]
anchor_right = 1.0
margin_top = -14.0
text = "*C"
align = 1
valign = 1

[node name="Button" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer"]
margin_top = 294.0
margin_right = 213.0
margin_bottom = 314.0
size_flags_horizontal = 3
text = "Kalkuler!"

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_left = 217.0
margin_right = 430.0
margin_bottom = 685.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 25

[node name="CritLeak" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_right = 213.0
margin_bottom = 24.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
text = "0.0000"
align = 1
valign = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/CritLeak"]
anchor_right = 1.0
margin_top = -14.0
text = "Testkriterie kg / s"
align = 1
valign = 2

[node name="CritLeakSec" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 49.0
margin_right = 213.0
margin_bottom = 73.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
text = "0.0000"
align = 1
valign = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/CritLeakSec"]
anchor_right = 1.0
margin_top = -14.0
text = "Tid til 0 dP kriterie"
align = 1
valign = 2

[node name="LeakSec" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 98.0
margin_right = 213.0
margin_bottom = 122.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
text = "0.0000"
align = 1
valign = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/LeakSec"]
anchor_right = 1.0
margin_top = -14.0
text = "Tid til 0 dP test"
align = 1
valign = 2

[node name="LeakRate" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 147.0
margin_right = 213.0
margin_bottom = 171.0
rect_min_size = Vector2( 0, 24 )
size_flags_horizontal = 3
size_flags_vertical = 1
custom_styles/normal = SubResource( 1 )
text = "0.0000"
align = 1
valign = 1

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer2/LeakRate"]
anchor_right = 1.0
margin_top = -14.0
text = "Lekkasjerate kg / s"
align = 1

[node name="Nitrogen" type="CheckBox" parent="MarginContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 196.0
margin_right = 213.0
margin_bottom = 220.0
text = "Nitrogen"

[node name="ColorRect2" type="ColorRect" parent="."]
visible = false
show_behind_parent = true
margin_left = 19.0
margin_top = 350.0
margin_right = 459.0
margin_bottom = 685.0
color = Color( 0.145098, 0.145098, 0.145098, 1 )

[node name="Test" type="ColorRect" parent="."]
show_behind_parent = true
margin_left = 16.0
margin_top = 360.0
margin_right = 416.0
margin_bottom = 696.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )

[node name="TrendLine" type="Node2D" parent="Test"]
script = ExtResource( 3 )

[node name="TrendLine2" type="Node2D" parent="Test"]
script = ExtResource( 3 )

[connection signal="item_selected" from="MarginContainer/HBoxContainer/VBoxContainer/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
